perf: Optimize potential performance lags fix: Fix the crash caused by excessive bonuses